# ros_record_video

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: cam2x2grid.launch  example.launch
scripts/: recorder.py
