<?xml version="1.0"?>
<package>
  <name>video_recorder</name>
  <version>0.0.1</version>
  <description>Video Recording Package for ROS</description>

  <maintainer email="ildoo@ildoo.net">Curtis Kim</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>